Added updateLeaderboard cloud functions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
+    "dev:emulate": "firebase emulators:start",
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
