--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "env-cmd": "^10.1.0",
     "firebase": "^8.6.2",
-    "sirv-cli": "^1.0.0"
+    "rollup-plugin-inject-process-env": "^1.3.1",
+    "sirv-cli": "^1.0.0",
+    "svelte-preprocess": "^4.7.4"
   }
 }
