--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev:emulate": "env-cmd -f .env.development.emulate rollup -c -w & npm run emulate",
     "emulate": "firebase emulators:start --debug",
     "start": "sirv public --no-clear",
-    "deploy:dev": "env-cmd -f .env.development npm run build",
-    "deploy:prod": "env-cmd -f .env.production npm run build && bash scripts/deploy_prod.sh"
+    "build:dev": "env-cmd -f .env.development npm run build",
+    "build:prod": "env-cmd -f .env.prod npm run build",
+    "deploy:dev": "npm run build:dev && bash scripts/deploy_dev.sh",
+    "deploy:prod": "npm run build:prod && bash scripts/deploy_prod.sh"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -22,6 +24,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@sentry/browser": "^6.11.0",
     "env-cmd": "^10.1.0",
     "firebase": "^8.6.2",
     "rollup-plugin-inject-process-env": "^1.3.1",
