--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@sentry/browser": "^6.11.0",
+    "@sentry/tracing": "^6.11.0",
     "env-cmd": "^10.1.0",
     "firebase": "^8.6.2",
     "rollup-plugin-inject-process-env": "^1.3.1",
