--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "@sentry/browser": "^6.11.0",
     "env-cmd": "^10.1.0",
     "firebase": "^8.6.2",
+    "firebase-tools": "^11.4.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "sirv-cli": "^1.0.0",
-    "svelte-preprocess": "^4.7.4"
+    "svelte-preprocess": "^4.7.4",
+    "tslib": "^2.4.0"
   }
 }
